<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:shadowColor="@color/stroke_Green_color"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="10"
        android:text="@string/clinic_consult"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/undraw_doctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

    <TextView
        android:id="@+id/textViewMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto"
        android:lineHeight="29dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/consult_specialist_doctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewMain3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/securely_and_privotely"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain2" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="309dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:textSize="19sp"
        android:text="@string/get_start"
        android:onClick="onClickGetStarted"
        android:backgroundTint="@color/green"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="18dp"
        android:foregroundGravity=""
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/textViewMain"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera_enhance" />

</androidx.constraintlayout.widget.ConstraintLayout>